# PneumoniaClassification

./: .gitignore  Makefile  README.md  data.dvc  dvc.yaml  project_env.yml  pyproject.toml
.dvc/: config
config/: main.yaml
config/data/: data1.yaml  data2.yaml
config/model/: model1.yaml  model2.yaml
docs/: GIT_FLOW_CHEAT_SHEET.md
src/: dataset.py  figures.py  generate_data_statistics.py  generate_figure.py  generate_model_performance_metrics_figure.py  model.py  process_data.py  pytorch_lightning_model.py  test_model.py  train_model.py  utils.py
